chore(styles): remove search engine fixed height

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -34,7 +34,7 @@
 }
 
 .product-card.search-engine__item {
-    height: 280px;
+    //height: 280px;
     padding: var(--spacer-3) 0;
 }
 .product-card.search-engine__item .product-card__pictures {
